tests/data/PRD_v1.22/Approved/NegativeSyntaxTest/Core_NonSafeness_2/Core_NonSafeness_2-input.rifps
Document( 
    Prefix(ex <http://example.org/example#>) 
    Prefix(pred <http://www.w3.org/2007/rif-builtin-predicate#>) 
    Group( 
      Forall ?x ?z (
	    If Or (
		External( pred:iri-string(?x ?z) )
		And( ex:q(?x) ex:r(?z) )
	    )
	    Then Do (Assert(ex:p()))
  )
))
